# vbare

./: README.md  STORY.md
.github/workflows/: pkg-pr-new.yaml
docs/: COMPARISON.md
fixtures/tests/basic/: v1.bare  v2.bare  v3.bare
rust/: Cargo.toml  README.md
rust/compiler/: Cargo.toml
rust/compiler/examples/: build_script_usage.rs
rust/compiler/src/: lib.rs
rust/examples/basic/: Cargo.toml  build.rs
rust/examples/basic/schemas/: v1.bare  v2.bare  v3.bare
rust/examples/basic/src/: lib.rs
rust/examples/basic/tests/: migrator.rs
rust/vbare/: Cargo.toml
rust/vbare-compiler/: Cargo.toml
rust/vbare-compiler/src/: lib.rs
rust/vbare-compiler/tests/: basic.rs
rust/vbare-gen/: Cargo.toml  README.md
rust/vbare-gen/src/: grammar.pest  lib.rs  parser.rs
rust/vbare/src/: lib.rs
rust/vbare/tests/: test.rs
scripts/: release.ts
typescript/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsup.base.ts  turbo.json  vitest.base.ts
typescript/compiler/: tsup.config.ts  vitest.config.ts
typescript/examples/basic/: index.test.ts  package.json  tsconfig.json  vitest.config.ts
typescript/examples/basic/scripts/: build.mjs
typescript/examples/basic/src/: index.test.ts  index.ts  migrator.ts
typescript/vbare/: package.json  tsup.config.ts
typescript/vbare-compiler/: package.json  tsconfig.json
typescript/vbare-compiler/src/: cli.ts  index.test.ts  index.ts
typescript/vbare/src/: index.test.ts  index.ts
