[package]
name = "vbare-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compile-time code generation for VBARE (Versioned Binary Application Record Encoding), an extension to BARE with versioned schema evolution"

[dependencies]
vbare-gen = { path = "../vbare-gen", version = "0.0.4" }
indoc.workspace = true
prettyplease.workspace = true
syn.workspace = true

[dev-dependencies]
tempfile = "3"
