[package]
name = "vbare-gen"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Code generator for VBARE (Versioned Binary Application Record Encoding), an extension to BARE with versioned schema evolution"
edition.workspace = true

[dependencies]
heck.workspace = true
pest_derive.workspace = true
pest.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
