[package]
name = "vbare"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime library for VBARE (Versioned Binary Application Record Encoding), an extension to BARE with versioned schema evolution"

[dependencies]
anyhow.workspace = true

[dev-dependencies]
serde.workspace = true
serde_bare.workspace = true