[package]
name = "basic"
version = "0.0.1"
edition = "2021"

[lib]
name = "basic"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_bare = { workspace = true }
vbare = { path = "../../vbare" }

[build-dependencies]
vbare-compiler = { path = "../../vbare-compiler" }

