[package]
name = "basic"
version = "0.0.1"
edition = "2021"
description = "Basic example for VBARE (Versioned Binary Application Record Encoding), an extension to BARE with versioned schema evolution"
license = "MIT"

[lib]
name = "basic"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_bare = { workspace = true }
vbare = { path = "../../vbare" }

[build-dependencies]
vbare-compiler = { path = "../../vbare-compiler" }

